# Gen-AI-Project

./: README.md  financial_qa_finetuning.jsonl  task1.ipynb
llm-validation/prompt_injection.txt/: prompt_injection.txt
minorproject/: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
minorproject/backend/: .env.example  Dockerfile  pyproject.toml
minorproject/backend/app/: __init__.py  main.py  worker.py
minorproject/backend/app/agents/: corrector.py  graph.py  planner.py  verifier.py
minorproject/backend/app/api/: evaluate.py  query.py
minorproject/backend/app/core/: config.py  logging.py
minorproject/backend/app/services/: generator.py  llm_adapter.py  queue.py  retriever.py  tracing.py
minorproject/backend/evaluation/: __init__.py  ablations.py
minorproject/backend/retrieval/: __init__.py  fusion.py
minorproject/backend/scripts/: ingest_corpus.py
minorproject/backend/tests/: __init__.py  conftest.py  test_api.py  test_data_synthesis.py  test_fusion.py  test_graph.py  test_queue.py  test_retriever.py  test_schemas.py  test_verifier.py
minorproject/backend/verifier/: __init__.py  data_synthesis.py  train.py
minorproject/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
minorproject/frontend/: Dockerfile  README.md  next.config.ts
minorproject/frontend/src/app/: globals.css  layout.tsx  page.tsx
minorproject/frontend/src/app/evaluate/: page.tsx
minorproject/frontend/src/components/: ClaimsDisplay.tsx  CorrectionHistory.tsx  PipelineVisualization.tsx  QueryInput.tsx  SkeletonLoader.tsx
minorproject/frontend/src/lib/: api.ts
minorproject/frontend/src/types/: index.ts
